2005-12-20  Corinna Vinschen  <corinna@vinschen.de>

	* winsup.h (flush_file_buffers): Define as inline function.
	* miscfuncs.cc (flush_file_buffers): Remove.

2005-12-20  Corinna Vinschen  <corinna@vinschen.de>

	* winsup.h (flush_file_buffers): Declare new function.
	(FLushFileBuffers): New define.
	* miscfuncs.cc (flush_file_buffers): Define new function.

2005-12-20  Christopher Faylor  <cgf@timesys.com>

	* fhandler.h (fhandler_termios::fixup_after_exec): Make non-inlined.
	* fhandler_termios.cc (fhandler_termios::fixup_after_exec): Don't call
	fixup_after_fork if close_on_exec'ed.

2005-12-19  Christopher Faylor  <cgf@timesys.com>

	* cygtls.h (_cygtls::interrupt_now): Subsume interruptible().
	(interruptible): Delete.
	(setup_handler): Remove interruptible call and just use return from
	interrupt_now.

2005-12-19  Christopher Faylor  <cgf@timesys.com>

	* fhandler.h (set_console_state_for_spawn): Add an argument to the
	declaration.
	* fhandler_console.cc (set_console_state_for_spawn): Ditto for the
	definition.  Only set invisible console for non-cygwin process.  Remove
	debugging leftover.
	* spawn.cc (spawn_guts): Pass argument denoting whether this is a
	cygwin process to set_console_state_for_spawn and only call this
	function when exec'ing.

2005-12-19  Corinna Vinschen  <corinna@vinschen.de>

	* mmap.cc (fhandler_dev_zero::mmap): Call VirtualFree(MEM_RELEASE)
	with zero length parameter, otherwise it fails.
	(fhandler_dev_zero::munmap): Ditto.

2005-12-18  Christopher Faylor  <cgf@timesys.com>

	* fhandler.h (fhandler_console::invisible_console): Declare new
	variable.
	(fhandler_pipe::fixup_in_child): Declare new function.
	(fhandler_console::need_invisible): Ditto.
	(fhandler_console::has_a): Ditto.
	* fhandler_console.cc (set_console_state_for_spawn): Eliminate return
	value.  Set up an invisible console if necessary prior to spawning.
	(fhandler_console::invisible_console): Define.
	* fhandler_tty.cc (fhandler_tty_slave::open): Use