@@ -1,3 +1,10 @@
+2005-12-21  Corinna Vinschen  <corinna@vinschen.de>
+
+	* fhandler_disk_file.cc (fhandler_base::fstat_helper): Fix inode number
+	debug output.
+	(fhandler_disk_file::fchown): Always set sensible permission values 
+	when creating the ACL for symlinks.
+
 2005-12-20  Corinna Vinschen  <corinna@vinschen.de>
 
 	* winsup.h (flush_file_buffers): Define as inline function.
